# data2prompt

./: .gitignore  LICENSE  PROMPT.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/data2prompt/: cli.py  constants.py  main.py  parsers.py  ui.py  utils.py
tests/: test_cli.py  test_utils.py
