[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data2prompt"
version = "0.1.0"
authors = [
  { name="Arian Mokhtariha", email="arian1385mokhtarihaa@gmail.com" },
]
description = "A CLI tool to package Data Science projects (Jupyter, CSVs) into clean, LLM-optimized Markdown prompts."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=1.0.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.5.0",
    "openpyxl",
]

[project.scripts]
data2prompt = "data2prompt.main:run_packager"
