[project]
name = "data2prompt"
version = "0.1.0"
description = "A high-performance Python utility to package local codebases and data for LLM context."
authors = [
    { name = "Arian Mokhtariha", email = "arian1385mokhtarihaa@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.9.0",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "rich>=13.9.4",
]

[project.scripts]
data2prompt = "data2prompt.main:run_packager"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
