[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data2prompt"
version = "0.1.0"
description = "A high-performance CLI tool to convert local data science workspaces into LLM-ready context."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Arian Mokhtariha", email = "arian1385mokhtarihaa@gmail.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
data2prompt = "data2prompt.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
